Add database setup to travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ python:
   - "2.7"
   - "3.5"
 install: pip install -r requirements.txt
+services: postgresql
+before_script:
+  - psql -c 'create database flask_example_test;' -U postgres
 script: ./manage.py test
