--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ install: pip install -r requirements.txt
 services: postgresql
 before_script:
   - psql -c 'create database flask_example_test;' -U postgres
+  - ./manage.py db upgrade
 script: ./manage.py test
