--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "2.7"
   - "3.5"
+addons: postgresql: "9.4"
 install: pip install -r requirements.txt
 services: postgresql
 before_script:
